--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,6 @@
     "Angular"
   ],
   "homepage": "https://github.com/Mauya/angular-todo",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -22,6 +21,10 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
-    "a0-angular-storage": "^0.0.15"
+    "a0-angular-storage": "^0.0.15",
+    "angular-bootstrap": "^2.3.0"
+  },
+  "dependencies": {
+    "angular-socialshare": "angularjs-socialshare#^2.3.3"
   }
 }
