--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,10 @@
   },
   "dependencies": {
     "angular-socialshare": "angularjs-socialshare#^2.3.3",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "angular-audio": "^1.7.3"
+  },
+  "resolutions": {
+    "angular": ">=1.2 < 1.5"
   }
 }
